--- a/assets/css/da-slider.css
+++ b/assets/css/da-slider.css
@@ -59,7 +59,7 @@
 }
 
 .da-slide h2 {
-	color: #fff;
+	color: #8c0515;
 	font-size: 54px;
 	width: 80%;
 	top: 0px;
@@ -72,7 +72,7 @@
 .da-slide p {
 	width: 80%;
 	top: 115px;
-	color: #fff;
+	color: #dad7cd;
 	font-size: 24px;
 	line-height: 26px;
 	height: 80px;
