--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ label {
 
 /* Header */
 #head {
-    background: #181015 url( ../images/bg_header.jpg) no-repeat;
+    background: #181015 url( ../images/Banner1.jpg) no-repeat;
     background-size: cover;
     min-height: 520px;
     text-align: center;
