--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -716,16 +716,14 @@ nav#filter {
 
 .toby {
     position: absolute;
-    z-index: 2;
     display: inline-block;
     float: right;
 
 }
 
-.toby .member-img{
-    float: right;
 
-    
+.chatbot{
+    float: right;
 }
 
 .team-socials {
